fix: Make the H1 larger than an H2 on smaller screens

--- a/src/components/layout/globals.css
+++ b/src/components/layout/globals.css
@@ -2,7 +2,7 @@
 
 @layer base {
   h1 {
-    @apply pb-8 text-4xl font-semibold text-sky-700 sm:text-4xl dark:text-sky-500 contrast-more:dark:text-sky-400;
+    @apply pb-8 text-4xl font-semibold text-sky-700 sm:text-5xl dark:text-sky-500 contrast-more:dark:text-sky-400;
   }
 
   h2 {
